# astra-gui

./: AGENTS.md  DEVELOPMENT.md  LOGGING_REVIEW.md  README.md  pyproject.toml  review_findings.md
.github/workflows/: publish.yml
src/astra_gui/: __about__.py  app.py  cli.py  home_screen.py  main.py
src/astra_gui/close_coupling/: bsplines.py  cc_notebook_page_module.py  clscplng.py  create_cc_notebook.py  dalton.py  lucia.py  molecule.py  notebook_state.py
src/astra_gui/time_dependent/: notebook_state.py  pulse.py  required_fields_prototype.py  td_notebook_page_module.py  time_dependent_notebook.py
src/astra_gui/time_independent/: notebook_state.py  pad.py  scatt_states.py  structural.py  ti_notebook_page_module.py  time_independent_notebook.py
src/astra_gui/utils/: config_module.py  font_module.py  hover_widget_module.py  logger_module.py  notebook_module.py  notification_module.py  popup_module.py  required_fields_module.py  scrollable_module.py  ssh_client.py  statusbar_module.py  symmetry_module.py  table_module.py
tests/: conftest.py  test_config_module.py  test_imports.py  test_logger_module.py  test_lucia_module.py  test_popup_module.py  test_pulse_module.py  test_ssh_client.py  test_statusbar_module.py  test_symmetry_module.py
