[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astra-gui"
dynamic = ["version"]
description = 'A Python Graphical User Interface for the ASTRA program'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Faria22", email = "fariafelipe22@hotmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Faria22/astra-gui#readme"
Issues = "https://github.com/Faria22/astra-gui/issues"
Source = "https://github.com/Faria22/astra-gui"

[tool.hatch.version]
path = "src/astra_gui/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/astra_gui tests}"

[tool.coverage.run]
source_pkgs = ["astra_gui", "tests"]
branch = true
parallel = true
omit = [
  "src/astra_gui/__about__.py",
]

[tool.coverage.paths]
astra_gui = ["src/astra_gui", "*/astra-gui/src/astra_gui"]
tests = ["tests", "*/astra-gui/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
