[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astra-gui"
dynamic = ["version"]
description = 'A Python Graphical User Interface for the ASTRA program'
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "MIT"
keywords = []
authors = [{ name = "Faria22", email = "fariafelipe22@hotmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "moldenViz>=1.8",
    "numpy>=2.2",
    "ttkwidgets>=0.13",
    "paramiko>=4.0",
    "psutil>=7.1",
]

[project.optional-dependencies]
dev = ["basedpyright>=1.31.4", "pytest>=8.4", "ruff>=0.14"]

[project.urls]
Documentation = "https://github.com/Faria22/astra-gui#readme"
Issues = "https://github.com/Faria22/astra-gui/issues"
Source = "https://github.com/Faria22/astra-gui"

[tool.hatch.version]
path = "src/astra_gui/__about__.py"

[tool.hatch.envs.default]
dev-mode = true
features = ["dev"]

[tool.hatch.envs.default.scripts]
lint = "ruff check {args:src tests}"
typecheck = "basedpyright {args:src tests}"
test = "pytest {args:tests}"
all = ["lint", "typecheck", "test"]

[tool.basedpyright]
typeCheckingMode = "basic"

[tool.hatch.build.targets.sdist]
exclude = ["/docs"]

[tool.hatch.build.targets.wheel]
packages = ["src/astra_gui"]

[tool.coverage.run]
source_pkgs = ["astra_gui", "tests"]
branch = true
parallel = true
omit = ["src/astra_gui/__about__.py"]

[tool.coverage.paths]
astra_gui = ["src/astra_gui", "*/astra-gui/src/astra_gui"]
tests = ["tests", "*/astra-gui/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
